--- a/src/app/editdata/editdata.component.html
+++ b/src/app/editdata/editdata.component.html
@@ -18,16 +18,17 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-2">
-                        <img src="/images/avatar.jpg" class="img-thumbnail" alt="...">
+                        <img src="https://scontent.fbkk23-1.fna.fbcdn.net/v/t1.6435-9/118270687_734543280448631_1423436869807307002_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=09cbfe&_nc_eui2=AeFAnCF2a3Gm_lpeGA7QwRzBN7UrN6iRPSM3tSs3qJE9IwEFAxrQ3ANRjSWS49DmfM17RC41p4FzhFIl3SaWZiXz&_nc_ohc=iYpWRdBIw9MAX8MuQbr&_nc_ht=scontent.fbkk23-1.fna&oh=c08b6884cb0fde7d464fcc942c90d669&oe=61A57C91"
+                         class="img-thumbnail" alt="...">
                     </div>
                     <div class="col-5">
-                        ชื่อ นามสกุล: ทดสอบ ทดสอบ<br />
+                        ชื่อ นามสกุล: นพรัตน์ วงษา<br />
                         หลักสูตรที่จบการศึกษา: เทคโนโลยีสารสนเทศ<br />
                         ปีที่จบการศึกษา: 2564
                     </div>
                     <div class="col-5">
-                        รหัสนิสิต: 6111111<br />
-                        GPA: 2.54<br />
+                        รหัสนิสิต: 6130260580<br />
+                        GPA: 4.00<br />
                         อาจารย์ที่ปรึกษา: อ.บุญชู จิตนุพงศ์
                     </div>
                 </div>
@@ -47,7 +48,7 @@
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">เบอร์โทรศัพท์</label>
                             <input type="tel" class="form-control" id="exampleFormControlInput1"
-                                placeholder="021222222">
+                                placeholder="0944914331">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">ที่อยู่</label>
@@ -58,17 +59,17 @@
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">อีเมล</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1"
-                                placeholder="name@example.com">
+                                placeholder="exam@example.com">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Line</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1"
-                                placeholder="testtesttest">
+                                placeholder="maholee">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Facebook</label>
                             <input type="text" class="form-control" id="exampleFormControlInput1"
-                                placeholder="www.facebook.com/test.test">
+                                placeholder="www.facebook.com">
                         </div>
                     </div>
                 </div>
@@ -130,34 +131,33 @@
                                 <div class="mb-3">
                                     <label for="exampleFormControlInput1" class="form-label">ระดับการศึกษา</label>
                                     <select class="form-select" aria-label="Default select example">
-                                        <option selected>Open this select menu</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
+                                        <option selected>Select Class</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
                                     </select>
                                 </div>
                                 <div class="mb-3">
                                     <label for="exampleFormControlInput1"
-                                        class="form-label">หลักสูตรที่จบการศึกษา</label>
+                                        class="form-label">ปีที่ที่จบการศึกษา</label>
                                     <input type="text" class="form-control" id="exampleFormControlInput1"
-                                        placeholder="testtesttest">
+                                        placeholder="1999">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="exampleFormControlInput1" class="form-label">สถานศึกษา</label>
+                                    <label for="exampleFormControlInput1" class="form-label">สถานศึกษาที่ศึกษาต่อ</label>
                                     <select class="form-select" aria-label="Default select example">
-                                        <option selected>Open this select menu</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
+                                        <option selected>Select Class</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
                                     </select>
                                 </div>
                                 <div class="mb-3">
                                     <label for="exampleFormControlInput1" class="form-label">ปีที่จบการศึกษา</label>
                                     <select class="form-select" aria-label="Default select example">
-                                        <option selected>Open this select menu</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
+                                        <option selected>Select Class</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
                                     </select>
                                 </div>
                                 <button type="button" class="btn btn-dark">บันทึกข้อมูล</button>
